<resources>
    <string name="app_name">Mini Twitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="registrarte_aqu">Registrarte Aquí</string>
    <string name="volver_al_registro">Volver al registro</string>
    <string name="btn_sign">Registrarme</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="que_esta_pasando">¿Que Esta Pasando?</string>
</resources>