<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.minitwitter.Activities.ui.dashboard.TweetListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_tweet_list_list" />

    <fragment
        android:id="@+id/navigation_tweets"
        android:name="com.example.minitwitter.Activities.ui.dashboard.TweetListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tweet_list_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.minitwitter.Activities.ui.notifications.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>